# recitation

./: pyproject.toml  recitation_7_sft_hf.ipynb  recitation_8_slurm.ipynb  recitation_9_lora.ipynb
